--- a/interface/src/styles/components/barchart.css
+++ b/interface/src/styles/components/barchart.css
@@ -15,7 +15,6 @@
 }
 
 .bc-barChart {
-    margin-top: 100px; 
 }
 
 .rect {
