--- a/interface/src/styles/components/datapane.css
+++ b/interface/src/styles/components/datapane.css
@@ -1,6 +1,6 @@
 #view {
-    text-align: center;
-    margin-top: 13em;
+    margin-top: 15px;
+    margin-left: 20px;
     width: 70%;
     float: left;
 }
