--- a/interface/src/styles/components/header.css
+++ b/interface/src/styles/components/header.css
@@ -1,7 +1,7 @@
 .header {
   text-align: center;
   background-color: #222;
-  height: 150px;
+  height: 100px;
   padding: 20px;
   color: white;
 }
